<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Mumbai</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="distance_in_km">Distance in KM</string>
    <string name="meter_reading">Meter Reading</string>
    <string name="calculate_fare">Calculate Fare</string>
    <string name="source">Source : </string>
    <string name="destination">Destination</string>
    <string name="fare_for_token_user">Fare for Token users : </string>
    <string name="fare_for_smartcard_user">Fare for SmartCard users : </string>
    <string name="invalid_option_selected">Invalid Option(s) Selected</string>
    <string name="reading">Reading</string>
    <string name="distance">Distance</string>
    <string name="day_fare">Day Fare</string>
    <string name="night_fare">Night Fare</string>
    <string name="show_complete_chart">Show Complete Chart</string>
    <string name="contact_developer_uri">mailto:mahesh@mahesh.ws</string>
    <string name="more_info">More Information</string>
    <string name="parseAppID">hesAG6XgGKorCU56iDp7KpsxGl0Vl2JdglUXqbR6</string>
    <string name="parseClientKey">BlBpRTpRboxOQHpuSgZ1yBVnGyR7iV9AZ022lrqL</string>

    <string-array name="metro_stations_array">
        <item>"Select"</item>
        <item>"Versova"</item>
        <item>"D. N. Nagar"</item>
        <item>"Azad Nagar"</item>
        <item>"Andheri"</item>
        <item>"WEH"</item>
        <item>"Chakala"</item>
        <item>"Airport Road"</item>
        <item>"Marol Naka"</item>
        <item>"Saki Naka"</item>
        <item>"Asalpha"</item>
        <item>"Jagruti Nagar"</item>
        <item>"Ghatkopar"</item>
    </string-array>
    <string-array name="mono_stations_array">
        <item>"Select"</item>
        <item>"Chembur"</item>
        <item>"VNP Marg Junction"</item>
        <item>"Fertilizer Township"</item>
        <item>"Bharat Petroleum"</item>
        <item>"Mysore Colony"</item>
        <item>"Bhakti Park"</item>
        <item>"Wadala Depot"</item>
    </string-array>

    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="destination2">Destination : </string>

</resources>
