<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading"
        android:id="@+id/textViewListMeter"
        android:layout_weight="0.25"
        android:gravity="center_horizontal"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:id="@+id/textViewListDistance"
        android:layout_weight="0.25"
        android:gravity="center_horizontal"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_fare"
        android:id="@+id/textViewListDayFare"
        android:layout_weight="0.25"
        android:gravity="center_horizontal"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night_fare"
        android:id="@+id/textViewListNightFare"
        android:layout_weight="0.25"
        android:gravity="center_horizontal"
        android:padding="5dp" />
</LinearLayout>