<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="beginning|middle|end"
    android:padding="5dp">



        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:id="@+id/textViewDest"
            android:layout_weight="2"
            android:gravity="left" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fare_for_token_user"
            android:id="@+id/textViewTokenFare"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fare_for_smartcard_user"
            android:id="@+id/textViewCardFare"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center" />

</LinearLayout>