<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading"
            android:id="@+id/textViewListViewMeter"
            android:layout_weight="0.25"
            android:gravity="center_horizontal"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:id="@+id/textViewListViewDistance"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_weight="0.25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_fare"
            android:id="@+id/textViewListViewDayFare"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_weight="0.25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_fare"
            android:id="@+id/textViewListViewNightFare"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_weight="0.25" />
        </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>